fix: footer text alignment

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -31,6 +31,7 @@ footer {
 			}
 			p {
 				text-align: center;
+				margin-top: 0;
 			}
 			div {
 				display: flex;
